--- a/style.css
+++ b/style.css
@@ -208,3 +208,37 @@ body {
 .alumnisanspinstripe {
   font-family: "Alumni Sans Pinstripe", sans-serif;
 }
+.modes {
+display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+  gap: 2vh;
+}
+.mode {
+height: 10vh;
+  width: 90%;
+  border: 1px solid var(--md);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3vh;
+  cursor: pointer;
+}
+.active {
+	background: var(--fg);
+	color: var(--bg);
+}
+#al {
+	border: 1px solid;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-image-slice: 100%;
+    border-image-source: none;
+  border-image-slice: 1;
+  border-width: 1px;
+  border-image-source: linear-gradient( 45deg, red, orange, yellow, green, blue, indigo, violet, red );
+}
